--- a/netsim/devices/sonic.yml
+++ b/netsim/devices/sonic.yml
@@ -11,3 +11,30 @@ group_vars:
   ansible_ssh_pass: vagrant
   ansible_network_os: sonic
   netlab_device_type: sonic
+evpn._start_transit_vlan: 3800
+features:
+  initial:
+    ipv4:
+      unnumbered: true
+    ipv6:
+      lla: true
+  bfd: true
+  bgp: true
+  eigrp: true
+  evpn:
+    irb: true
+  gateway:
+    protocol: [ vrrp ]
+  isis:
+    unnumbered:
+      ipv4: true
+      ipv6: true
+  ospf:
+    unnumbered: true
+  vlan:
+    model: l3-switch
+    native_routed: true
+    subif_name: '{ifname}.{subif_index}'
+    svi_interface_name: Vlan{vlan}
+  vrf: true
+  vxlan: true
