--- a/netsim/devices/sonic.yml
+++ b/netsim/devices/sonic.yml
@@ -6,7 +6,7 @@ ifindex_offset: 1
 libvirt:
   image: broadcom_sonic
 group_vars:
-  ansible_connection: network_cli
+  ansible_connection: paramiko
   ansible_user: vagrant
   ansible_ssh_pass: vagrant
   ansible_network_os: sonic
